# fake-dlfcn

./: .gitignore  CMakeLists.txt  README.md  build.gradle  fake-dlfcn.c  fake_dlfcn.c  fake_dlfcn.h
example/: CMakeLists.txt  build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/cpp/: ft.c  main.c  main.h  testcpp.cpp
gradle/wrapper/: gradle-wrapper.properties
include/Nougat_dlfunctions/: fake_dlfcn.h
